--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row text-center d-flex d-lg-flex justify-content-center align-items-lg-center">
                 <div class="col-lg-4"><a class="btn btn-outline-light btn-xl" role="button" id="NoButton" onclick="ClickNo()"><i class="fa fa-close me-2"></i><span>NO</span></a></div>
-                <div class="col-lg-4"><a class="btn btn-outline-light btn-xl" role="button" href="#"><i class="fa fa-check me-2"></i><span>YES</span></a></div>
+                <div class="col-lg-4"><a class="btn btn-outline-light btn-xl" role="button" id="YesButton"><i class="fa fa-check me-2"></i><span>YES</span></a></div>
             </div>
             <div class="text-center mt-4"></div>
         </div>
