--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             </div>
             <div class="row text-center d-flex d-lg-flex justify-content-center align-items-lg-center">
                 <div class="col-lg-4"><a class="btn btn-outline-light btn-xl" role="button" id="NoButton" onclick="ClickNo()"><i class="fa fa-close me-2"></i><span>NO</span></a></div>
+                <iframe width="110" height="200" src="https://www.myinstants.com/instant/yippee-tbh-93589/embed/" frameborder="0" scrolling="no"></iframe>
                 <div class="col-lg-4"><a class="btn btn-outline-light btn-xl" role="button" id="YesButton"><i class="fa fa-check me-2"></i><span>YES</span></a></div>
+                    <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+                
             </div>
             <div class="text-center mt-4"></div>
         </div>
