--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="container text-center">
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
-                                <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
+                                <h2 class="text-uppercase text-secondary mb-0">Eid outfits</h2>
                                 <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/Eid2.jpg" width="400">
                                 <p class="mb-5">Your eid outfits were soo beautiful and I can't wait to see how good you'll look this year, white is most definitely your colour.</p>
                             </div>
